--- a/website/newsletter/251/index.mdx
+++ b/website/newsletter/251/index.mdx
@@ -137,6 +137,7 @@ Designed specifically for testing, Wallaby features include a **Time Travel Debu
 
 ## 🔀 Other {#other}
 
+- 📣 [GitHub - Our plan for a more secure npm supply chain](https://github.blog/security/supply-chain-security/our-plan-for-a-more-secure-npm-supply-chain/)
 - 👀 [W3C – Draft for CSS Environment Variables](https://www.w3.org/news/2025/first-public-working-draft-css-environment-variables-module-level-1/)
 - 📜 [The Big Gotcha With @starting-style](https://www.joshwcomeau.com/css/starting-style/): `@starting style` can be your friend, but you need to use it correctly. Josh Comeau explains how to utilize it to leverage its benefits and compares it to the standard `@keyframe`.
 - 📜 [What You Need to Know about Modern CSS (2025 Edition)](https://frontendmasters.com/blog/what-you-need-to-know-about-modern-css-2025-edition/)
@@ -146,7 +147,7 @@ Designed specifically for testing, Wallaby features include a **Time Travel Debu
 - 📦 [Wasm 3.0 – 64-bit address space, multiple memories, garbage collection, native exception handling](https://webassembly.org/news/2025-09-17-wasm-3.0/)
 - 📦 [knip 5.64 – adds Rstest and bump plugins](https://github.com/webpro-nl/knip/releases/tag/5.64.0)
 - 🔗 [NPM Security Best Practices](https://github.com/bodadotsh/npm-security-best-practices): A set of practices stay safe from npm supply chain attacks.
-- 🎙️ [Syntax – podcast with interview of Vite creator: Evan You](https://syntax.fm/show/939/creator-of-vite-evan-you)
+- 🎙️ [Syntax – Podcast with interview of Vite creator: Evan You](https://syntax.fm/show/939/creator-of-vite-evan-you)
 
 ---
 
