--- a/website/newsletter/251/index.mdx
+++ b/website/newsletter/251/index.mdx
@@ -90,7 +90,7 @@ Although full RSC support is coming later, these Vite plugins already enable the
 - 📦 [tldraw 4.0 – Infinite canvas in React - New CLI and starter kits, improved accessibility, license changes](https://github.com/tldraw/tldraw/releases/tag/v4.0.0)
 - 📦 [Isograph 0.4 – Modern GraphQL client – Introduces VSCode extension with syntax highlighting and "go to definition"](https://isograph.dev/blog/2025/09/17/isograph-0.4.0/)
 - 🎥 [ThePrimeTime – The `useEffect` incident at Cloudflare](https://www.youtube.com/watch?v=gDVxBOGL99Q)
-- 🎥 [Cosden Solutions – The Most Underrated React Hooh - useSyncExternalStore](https://www.youtube.com/watch?v=WBPUz1u2rZ8)
+- 🎥 [Cosden Solutions – The Most Underrated React Hook - useSyncExternalStore](https://www.youtube.com/watch?v=WBPUz1u2rZ8)
 - 🎥 [Ben Holmes – Building desktop apps with React? Try Electron or Tauri](https://www.youtube.com/watch?v=9yPOXPFvQQs)
 - 🎙️ [PodRocket – Mark Dalgeish on mastering RSCs with React Router](https://podrocket.logrocket.com/mark-dalgleish-mastering-rsc-react-router)
 
