--- a/website/newsletter/252/index.mdx
+++ b/website/newsletter/252/index.mdx
@@ -142,8 +142,8 @@ React 19.2
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/252/meme.jpg)](https://x.com/ahudovich/status/1970831643339583916)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/252/meme2.jpg)](https://x.com/theo/status/1958637078427967900)
 
 See ya! 👋
