--- a/website/newsletter/253/index.mdx
+++ b/website/newsletter/253/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /253
-title: "This Week In React #253: ..."
+title: "This Week In React #253: ViewTransition, Fragment Refs, Compiler, React Foundation, useEffectEvent, Activity | RN 0.82, Hermes V1, DOM APIs, Vega OS | Prettier, Node.js, CSS, ESLint"
 authors: [slorber]
 date: 10-08-2025
 unlisted: true
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This week is a big one: we barely had time to recover from last week's React 19.2 release, and now **React Conf** is happening live with another bunch of exclusive announcements!
+
+I'll let you discover it all for yourselves below, enjoy!👌
 
 <!-- truncate -->
 
@@ -41,7 +43,11 @@ And that’s just the beginning. With Convex, you can:
 
 ## ⚛️ React {#react}
 
-React Conf is happening right now\! We already got [great announcements on day 1](https://www.youtube.com/watch?v=zyVRg2QR6LA) about React core features, and [day 2 is still live](https://www.youtube.com/watch?v=p9OcztRyDl0), focusing more on React Native and frameworks.
+![React Conf](/emails/issues/253/reactconf.png)
+
+**React Conf is happening right now\!**
+
+We already got [great announcements on day 1](https://www.youtube.com/watch?v=zyVRg2QR6LA) about React core features, and [day 2 is still live](https://www.youtube.com/watch?v=p9OcztRyDl0), focusing more on React Native and frameworks.
 
 Of course, we got an overview of the new exciting features coming with [React 19.2](https://react.dev/blog/2025/10/01/react-19-2) (covered last week), but that's not all—they also saved a few exclusive announcements for the conference:
 
@@ -50,6 +56,7 @@ Of course, we got an overview of the new exciting features coming with [React 19
 - [**The React Foundation**](https://react.dev/blog/2025/10/07/introducing-the-react-foundation) – hosted under the Linux Foundation – to become the new home of React, React Native and JSX. It will support the community and its ecosystem through a new independent technical governance structure to ensure the future of React. The founding corporate members will be Amazon, Callstack, Expo, Meta, Microsoft, Software Mansion, and Vercel. It is part of the Linux Foundation
 - **React Compiler is now 1.0\!** It deeply understands your React code and should be able to optimize it for any platform, but also report problems through the new ESLint plugin integration. The React Compiler is recommended for all new apps, and existing apps can adopt it incrementally. The team also shared their research on new Compiler-based F-word React performance projects called Forest (a runtime based on signal-like lazy computation graph) and Fir (a constrained version of React, hybrid eager/lazy incremental rendering).
 - **React Native 0.82** – freshly announced and covered in the dedicated section – the very first version that only supports the New Architecture.
+- Probably more coming as the conference is still ongoing!
 
 ---
 
@@ -92,7 +99,9 @@ Of course, we got an overview of the new exciting features coming with [React 19
 
 ## 📱 React-Native {#react-native}
 
-[React Native 0.82 \- A New Era](https://reactnative.dev/blog/2025/10/08/react-native-0.82)
+[![React Native 0.82 - A New Era](/emails/issues/253/rn.jpg)](https://reactnative.dev/blog/2025/10/08/react-native-0.82)
+
+**[React Native 0.82 \- A New Era](https://reactnative.dev/blog/2025/10/08/react-native-0.82)**
 
 React Native now runs entirely on the New Architecture, and you cannot opt-out anymore. It’s a milestone release, and the start of a new era where there Legacy Architecture will be progressively removed.
 
