--- a/website/newsletter/253/index.mdx
+++ b/website/newsletter/253/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /253
-title: "This Week In React #253: ViewTransition, Fragment Refs, Compiler, React Foundation, useEffectEvent, Activity | RN 0.82, Hermes V1, DOM APIs, Vega OS | Prettier, Node.js, CSS, ESLint"
+title: "This Week In React #253: React Compiler 1.0, React Foundation, ViewTransition, Fragment Refs, useEffectEvent, Activity | RN 0.82, Hermes V1, DOM APIs, Vega OS | Keyboard Controller, IAP, Skia | Prettier, Node.js, CSS, ESLint"
 authors: [slorber]
 date: 10-08-2025
 ---
