--- a/website/newsletter/253/index.mdx
+++ b/website/newsletter/253/index.mdx
@@ -50,8 +50,8 @@ We already got [great announcements on day 1](https://www.youtube.com/watch?v=zy
 
 Of course, we got an overview of the new exciting features coming with [React 19.2](https://react.dev/blog/2025/10/01/react-19-2) (covered last week), but that's not all—they also saved a few exclusive announcements for the conference:
 
-- [**`<ViewTransition>`**](https://react.dev/reference/react/ViewTransition) is now available in Canary\*\* and lets you animate elements that update inside a Transition, also supporting Shared Elements Transitions. It currently only works in the DOM, but they are working on adding support for React Native and other platforms
-- [**`<Fragment ref={...}>`**](https://react.dev/reference/react/Fragment#fragmentinstance) is now available in Canary\*\* and provides a new way to compose platform behaviors by exposing an imperative API to manipulate the children nodes of the Fragment
+- **[`<ViewTransition>`](https://react.dev/reference/react/ViewTransition) is now available in Canary** and lets you animate elements that update inside a Transition, also supporting Shared Elements Transitions. It currently only works in the DOM, but they are working on adding support for React Native and other platforms
+- **[`<Fragment ref={...}>`](https://react.dev/reference/react/Fragment#fragmentinstance) is now available in Canary** and provides a new way to compose platform behaviors by exposing an imperative API to manipulate the children nodes of the Fragment
 - [**The React Foundation**](https://react.dev/blog/2025/10/07/introducing-the-react-foundation) – hosted under the Linux Foundation – to become the new home of React, React Native and JSX. It will support the community and its ecosystem through a new independent technical governance structure to ensure the future of React. The founding corporate members will be Amazon, Callstack, Expo, Meta, Microsoft, Software Mansion, and Vercel. It is part of the Linux Foundation
 - **React Compiler is now 1.0\!** It deeply understands your React code and should be able to optimize it for any platform, but also report problems through the new ESLint plugin integration. The React Compiler is recommended for all new apps, and existing apps can adopt it incrementally. The team also shared their research on new Compiler-based F-word React performance projects called Forest (a runtime based on signal-like lazy computation graph) and Fir (a constrained version of React, hybrid eager/lazy incremental rendering).
 - **React Native 0.82** – freshly announced and covered in the dedicated section – the very first version that only supports the New Architecture.
